--- a/newversion/new.html
+++ b/newversion/new.html
@@ -163,7 +163,7 @@
             <div class="card" data-aos="fade-up" data-aos-delay="100">
               <img src="/Dogs/campus/lhc.jpg" class="card-img-top" alt="Campus Dog 1">
               <div class="card-body">
-                <p class="card-text">Description of campus fauna.</p>
+                <p class="card-text">Description of campus Dogs.</p>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
             <div class="card" data-aos="fade-up" data-aos-delay="200">
               <img src="/Dogs/campus/ponlait.jpg" class="card-img-top" alt="Campus Dog 2">
               <div class="card-body">
-                <p class="card-text">More details about campus fauna.</p>
+                <p class="card-text">More details about Dogs.</p>
               </div>
             </div>
           </div>
@@ -181,7 +181,7 @@
             <div class="card" data-aos="fade-up" data-aos-delay="300">
               <img src="/Dogs/Boys/auro4.jpg" class="card-img-top" alt="Other Fauna 1">
               <div class="card-body">
-                <p class="card-text">Information about other fauna.</p>
+                <p class="card-text">Information about other Dogs.</p>
               </div>
             </div>
           </div>
@@ -190,7 +190,7 @@
             <div class="card" data-aos="fade-up" data-aos-delay="400">
               <img src="/Dogs/campus/sj.jpg" class="card-img-top" alt="Other Fauna 2">
               <div class="card-body">
-                <p class="card-text">Additional info on local fauna.</p>
+                <p class="card-text">Additional info on local Dogs.</p>
               </div>
             </div>
           </div>
