--- a/newversion/new.html
+++ b/newversion/new.html
@@ -156,49 +156,51 @@
       </p>
       
       <!-- Dogs Section -->
-      <div class="card-row" id="dogs">
-        <h3>Dogs</h3>
-        <div class="row">
-          <div class="col-md-3">
-            <div class="card" data-aos="fade-up" data-aos-delay="100">
-              <img src="/Dogs/campus/lhc.jpg" class="card-img-top" alt="Campus Dog 1">
-              <div class="card-body">
-                <p class="card-text">Description of campus Dogs.</p>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-md-3">
-            <div class="card" data-aos="fade-up" data-aos-delay="200">
-              <img src="/Dogs/campus/ponlait.jpg" class="card-img-top" alt="Campus Dog 2">
-              <div class="card-body">
-                <p class="card-text">More details about Dogs.</p>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-md-3">
-            <div class="card" data-aos="fade-up" data-aos-delay="300">
-              <img src="/Dogs/Boys/auro4.jpg" class="card-img-top" alt="Other Fauna 1">
-              <div class="card-body">
-                <p class="card-text">Information about other Dogs.</p>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col-md-3">
-            <div class="card" data-aos="fade-up" data-aos-delay="400">
-              <img src="/Dogs/campus/sj.jpg" class="card-img-top" alt="Other Fauna 2">
-              <div class="card-body">
-                <p class="card-text">Additional info on local Dogs.</p>
-              </div>
-            </div>
-          </div>
+<div id="dogs" class="container mt-5">
+  <h3 class="mb-4">Dogs</h3>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="card" data-aos="fade-up" data-aos-delay="100">
+        <img src="/Dogs/campus/lhc.jpg" class="card-img-top" alt="Campus Dog 1">
+        <div class="card-body">
+          <p class="card-text">Description of campus Dogs.</p>
         </div>
       </div>
-      <div class="d-flex justify-content-end mt-3">
-        <a href="dogs.html" class="btn btn-outline-primary">View On Map</a>
+    </div>
+
+    <div class="col-md-3">
+      <div class="card" data-aos="fade-up" data-aos-delay="200">
+        <img src="/Dogs/campus/ponlait.jpg" class="card-img-top" alt="Campus Dog 2">
+        <div class="card-body">
+          <p class="card-text">More details about Dogs.</p>
+        </div>
       </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="card" data-aos="fade-up" data-aos-delay="300">
+        <img src="/Dogs/Boys/auro4.jpg" class="card-img-top" alt="Other Dog 1">
+        <div class="card-body">
+          <p class="card-text">Information about other Dogs.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="card" data-aos="fade-up" data-aos-delay="400">
+        <img src="/Dogs/campus/sj.jpg" class="card-img-top" alt="Other Dog 2">
+        <div class="card-body">
+          <p class="card-text">Additional info on local Dogs.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="d-flex justify-content-end mt-4">
+    <a href="dogs.html" class="btn btn-outline-primary">View On Map</a>
+  </div>
+</div>
+
       
       <!-- Crows Section -->
       <div class="card-row" id="Crows">
