--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ hr {
         <source src="PU Google Earth.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <button id="explorebt" onclick="window.location.href='/newversion/new.html'">Explore →</button>
+    <button id="explorebt" onclick="window.location.href='newversion/new.html'">Explore →</button>
 </div>
 
 <hr>
