--- a/newversion/new.html
+++ b/newversion/new.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="/Pondicherry_University_logo_24bc5db39a.webp" alt="Logo" width="80" height="80" class="me-2">
+        <img src="../Pondicherry_University_logo_24bc5db39a.webp" alt="Logo" width="80" height="80" class="me-2">
         Pondicherry University
       </a>
 
@@ -92,21 +92,21 @@ function searchPage() {
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Plants/African.jpg" class="d-block w-100" alt="African Plant">
+            <img src="../Plants/African.jpg" class="d-block w-100" alt="African Plant">
             <div class="carousel-caption d-none d-md-block">
               <h5>Welcome to Pondicherry University</h5>
               <p>A Green Haven of Knowledge and Nature</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/Plants/Ashoka Tree, Saraca Asoca/unnamed.jpg" class="d-block w-100" alt="Ashoka Tree's flowers">
+            <img src="../Plants/Ashoka Tree, Saraca Asoca/unnamed.jpg" class="d-block w-100" alt="Ashoka Tree's flowers">
             <div class="carousel-caption d-none d-md-block">
               <h5>Discover Our Rich Flora</h5>
               <p>From rare trees to vibrant flowering plants</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/Plants/banyan tree.jpg" class="d-block w-100" alt="Banyan Tree">
+            <img src="../Plants/banyan tree.jpg" class="d-block w-100" alt="Banyan Tree">
             <div class="carousel-caption d-none d-md-block">
               <h5>Nature Meets Campus Life</h5>
               <p>Experience biodiversity in every step</p>
@@ -136,28 +136,28 @@ function searchPage() {
 
       <div class="card-row">
         <div class="card" data-aos="fade-up" data-aos-delay="100">
-          <img src="/Plants/cherryplant.jpg" class="card-img-top" alt="Cherry Plant">
+          <img src="../Plants/cherryplant.jpg" class="card-img-top" alt="Cherry Plant">
           <div class="card-body">
             <p class="card-text">Cherry plant description here.</p>
           </div>
         </div>
 
         <div class="card" data-aos="fade-up" data-aos-delay="200">
-          <img src="/Plants/banyan tree.jpg" class="card-img-top" alt="Banyan Tree">
+          <img src="../Plants/banyan tree.jpg" class="card-img-top" alt="Banyan Tree">
           <div class="card-body">
             <p class="card-text">Banyan tree details go here.</p>
           </div>
         </div>
 
         <div class="card" data-aos="fade-up" data-aos-delay="300">
-          <img src="/Plants/autographtree.jpg" class="card-img-top" alt="Autograph Tree">
+          <img src="../Plants/autographtree.jpg" class="card-img-top" alt="Autograph Tree">
           <div class="card-body">
             <p class="card-text">Autograph tree information here.</p>
           </div>
         </div>
 
         <div class="card" data-aos="fade-up" data-aos-delay="400">
-          <img src="/Plants/African.jpg" class="card-img-top" alt="African Plant">
+          <img src="../Plants/African.jpg" class="card-img-top" alt="African Plant">
           <div class="card-body">
             <p class="card-text">African plant info here.</p>
           </div>
@@ -185,7 +185,7 @@ function searchPage() {
   <div class="row">
     <div class="col-md-3">
       <div class="card" data-aos="fade-up" data-aos-delay="100">
-        <img src="/Dogs/campus/lhc.jpg" class="card-img-top" alt="Campus Dog 1">
+        <img src="../Dogs/campus/lhc.jpg" class="card-img-top" alt="Campus Dog 1">
         <div class="card-body">
           <p class="card-text">Description of campus Dogs.</p>
         </div>
@@ -194,7 +194,7 @@ function searchPage() {
 
     <div class="col-md-3">
       <div class="card" data-aos="fade-up" data-aos-delay="200">
-        <img src="/Dogs/campus/ponlait.jpg" class="card-img-top" alt="Campus Dog 2">
+        <img src="../Dogs/campus/ponlait.jpg" class="card-img-top" alt="Campus Dog 2">
         <div class="card-body">
           <p class="card-text">More details about Dogs.</p>
         </div>
@@ -203,7 +203,7 @@ function searchPage() {
 
     <div class="col-md-3">
       <div class="card" data-aos="fade-up" data-aos-delay="300">
-        <img src="/Dogs/Boys/auro4.jpg" class="card-img-top" alt="Other Dog 1">
+        <img src="../Dogs/Boys/auro4.jpg" class="card-img-top" alt="Other Dog 1">
         <div class="card-body">
           <p class="card-text">Information about other Dogs.</p>
         </div>
@@ -212,7 +212,7 @@ function searchPage() {
 
     <div class="col-md-3">
       <div class="card" data-aos="fade-up" data-aos-delay="400">
-        <img src="/Dogs/campus/sj.jpg" class="card-img-top" alt="Other Dog 2">
+        <img src="../Dogs/campus/sj.jpg" class="card-img-top" alt="Other Dog 2">
         <div class="card-body">
           <p class="card-text">Additional info on local Dogs.</p>
         </div>
@@ -232,7 +232,7 @@ function searchPage() {
         <div class="row">
           <div class="col-md-3">
             <div class="card" data-aos="fade-up" data-aos-delay="100">
-              <img src="/crows/kc1.jpg" class="card-img-top" alt="Campus Crow 1">
+              <img src="../crows/kc1.jpg" class="card-img-top" alt="Campus Crow 1">
               <div class="card-body">
                 <p class="card-text">A single crow perched on a tree near girl's hostel.</p>
               </div>
@@ -241,7 +241,7 @@ function searchPage() {
   
           <div class="col-md-3">
             <div class="card" data-aos="fade-up" data-aos-delay="200">
-              <img src="/crows/mc1.jpg" class="card-img-top" alt="Campus Dog 2">
+              <img src="../crows/mc1.jpg" class="card-img-top" alt="Campus Dog 2">
               <div class="card-body">
                 <p class="card-text">Crows during roosting hour near Madam Curie hostel</p>
               </div>
@@ -250,7 +250,7 @@ function searchPage() {
   
           <div class="col-md-3">
             <div class="card" data-aos="fade-up" data-aos-delay="300">
-              <img src="/crows/admin.jpg" class="card-img-top" alt="Other Fauna 1">
+              <img src="../crows/admin.jpg" class="card-img-top" alt="Other Fauna 1">
               <div class="card-body">
                 <p class="card-text">A murder of crows spotted near the admin block</p>
               </div>
@@ -259,7 +259,7 @@ function searchPage() {
   
           <div class="col-md-3">
             <div class="card" data-aos="fade-up" data-aos-delay="400">
-              <img src="/crows/mc2.jpg" class="card-img-top" alt="Other Fauna 2">
+              <img src="../crows/mc2.jpg" class="card-img-top" alt="Other Fauna 2">
               <div class="card-body">
                 <p class="card-text">Crows tend to cluster around the dining mess</p>
               </div>
@@ -283,23 +283,23 @@ function searchPage() {
   <!-- Row 1: 6 members -->
   <div class="credits-row">
     <div class="credits-member">
-      <img src="/team/Athul.jpg" alt="Athul Krishnan TR">
+      <img src="../team/Athul.jpg" alt="Athul Krishnan TR">
       <p>Athul Krishnan TR</p>
     </div>
     <div class="credits-member">
-      <img src="/team/kaveri.jpg" alt="Boda Kaveri">
+      <img src="../team/kaveri.jpg" alt="Boda Kaveri">
       <p>Boda Kaveri</p>
     </div>
     <div class="credits-member">
-      <img src="/team/fuad.jpg" alt="Fuad PP">
+      <img src="../team/fuad.jpg" alt="Fuad PP">
       <p>Fuad PP</p>
     </div>
     <div class="credits-member">
-      <img src="/team/gokul.jpg" alt="Gokul G">
+      <img src="../team/gokul.jpg" alt="Gokul G">
       <p>Gokul G</p>
     </div>
     <div class="credits-member">
-      <img src="/team/maalu.jpg" alt="Lakshmi Nandana B">
+      <img src="../team/maalu.jpg" alt="Lakshmi Nandana B">
       <p>Lakshmi Nandana B</p>
     </div>
   
@@ -308,23 +308,23 @@ function searchPage() {
   <!-- Row 2: 4 members centered -->
   <div class="credits-row centered">
       <div class="credits-member">
-      <img src="/team/mohan.jpg" alt="Mohan Raju">
+      <img src="../team/mohan.jpg" alt="Mohan Raju">
       <p>Mohan Raju</p>
     </div>
     <div class="credits-member">
-      <img src="/team/shwetha.jpg" alt="Shwetha P">
+      <img src="../team/shwetha.jpg" alt="Shwetha P">
       <p>Shwetha P</p>
     </div>
     <div class="credits-member">
-      <img src="/team/me.jpg" alt="Sivangi Sankar">
+      <img src="../team/me.jpg" alt="Sivangi Sankar">
       <p>Sivangi Sankar</p>
     </div>
     <div class="credits-member">
-      <img src="/team/chandu.jpg" alt="Tuvvadoddi Chandu">
+      <img src="../team/chandu.jpg" alt="Tuvvadoddi Chandu">
       <p>Tuvvadoddi Chandu</p>
     </div>
     <div class="credits-member">
-      <img src="/team/viswa.jpg" alt="Viswapriya R">
+      <img src="../team/viswa.jpg" alt="Viswapriya R">
       <p>Viswapriya R</p>
     </div>
   </div>
