--- a/newversion/new.html
+++ b/newversion/new.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="../Pondicherry_University_logo_24bc5db39a.webp" alt="Logo" width="80" height="80" class="me-2">
+        <img src="Pondicherry_University_logo_24bc5db39a.webp" alt="Logo" width="80" height="80" class="me-2">
         Pondicherry University
       </a>
 
@@ -92,21 +92,21 @@ function searchPage() {
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../Plants/African.jpg" class="d-block w-100" alt="African Plant">
+            <img src="Plants/African.jpg" class="d-block w-100" alt="African Plant">
             <div class="carousel-caption d-none d-md-block">
               <h5>Welcome to Pondicherry University</h5>
               <p>A Green Haven of Knowledge and Nature</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../Plants/Ashoka Tree, Saraca Asoca/unnamed.jpg" class="d-block w-100" alt="Ashoka Tree's flowers">
+            <img src="Plants/Ashoka Tree, Saraca Asoca/unnamed.jpg" class="d-block w-100" alt="Ashoka Tree's flowers">
             <div class="carousel-caption d-none d-md-block">
               <h5>Discover Our Rich Flora</h5>
               <p>From rare trees to vibrant flowering plants</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../Plants/banyan tree.jpg" class="d-block w-100" alt="Banyan Tree">
+            <img src="Plants/banyan tree.jpg" class="d-block w-100" alt="Banyan Tree">
             <div class="carousel-caption d-none d-md-block">
               <h5>Nature Meets Campus Life</h5>
               <p>Experience biodiversity in every step</p>
