Flora css for all plans dogs and crows

--- a/newversion/crows.html
+++ b/newversion/crows.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crows</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <link rel="stylesheet" href="crows.css" />
+    <link rel="stylesheet" href="flora.css" />
   </head>
   <body>
     <div class="crow-page">
@@ -24,7 +24,7 @@
         <div id="avian-map"></div>
       </div>
 
-      <div class="fauna-facts">
+      <div class="crowfauna-facts">
         <h1>BINOMIAL NAME: <i>Corvus splendens</i></h1>
         <p>
           <b>The Crow</b> is a highly intelligent bird belonging to the Corvidae
@@ -36,7 +36,7 @@
           remarkable memory and learning capacity make them one of the most
           fascinating bird species in the animal kingdom.
         </p>
-        <div class="fauna-hostel">
+        <div class="crowfauna-hostel">
           <h2>Scientific Classification</h2>
           <ul>
             <li><b>Domain:</b> Eukaryota</li>
@@ -52,27 +52,29 @@
         <div class="ecoimp">
           <h1>ECOLOGICAL ROLE:</h1>
           <p>
-            <b>Natural Waste Managers</b><br />
+            <b style="font-size: 1.3em; color: green">Natural Waste Managers</b
+            ><br />
             Crows are efficient scavengers. They feed on organic waste, carrion,
             and discarded food, reducing the volume of waste and helping to
             maintain cleanliness in urban environments. This natural waste
             management limits the spread of diseases and reduces the need for
             human-led waste cleanup.<br />
 
-            <b>Pest Control</b><br />
+            <b style="font-size: 1.3em; color: green">Pest Control</b><br />
             Crows also help control the population of various insects, small
             rodents, and even agricultural pests by feeding on them. Their diet
             includes caterpillars, beetles, grasshoppers, and other
             crop-damaging organisms, which makes them beneficial in protecting
             agricultural ecosystems.<br />
 
-            <b>Seed Dispersal Agents</b><br />
+            <b style="font-size: 1.3em; color: green">Seed Dispersal Agents</b
+            ><br />
             By consuming fruits and later excreting the seeds, crows contribute
             to plant propagation and biodiversity. Their movement across
             different habitats allows for wide dispersal of seeds, especially in
             fragmented environments.<br />
 
-            <b>Human Benefits</b><br />
+            <b style="font-size: 1.3em; color: green">Human Benefits</b><br />
             Crows play a unique role in human society by acting as environmental
             indicators. Their presence and behavior can signal changes in the
             ecosystem, such as pollution or food scarcity. In addition, their
@@ -84,32 +86,37 @@
             curiosity, respect for wildlife, and awareness of ecological
             interdependence.
           </p>
+          <br />
         </div>
-        <h3>Common Crow Behavior Observations</h3>
+        <h1>Common Crow Behavior Observations</h1>
         <p>
-          <b>Territorial Instincts:</b> Crows often establish territories around
-          tree clusters, rooftops, and food sources like garbage bins, canteens,
-          and marketplaces. They defend these areas from other animals and rival
-          crow groups.
+          <b style="font-size: 1.3em; color: green">Territorial Instincts:</b>
+          <br />
+          Crows often establish territories around tree clusters, rooftops, and
+          food sources like garbage bins, canteens, and marketplaces. They
+          defend these areas from other animals and rival crow groups.
         </p>
         <p>
-          <b>Routine Activities:</b> Crows typically follow a daily routine,
-          scavenging for food in open areas, markets, and around human
-          settlements, resting in shaded trees or high structures, often
-          grooming themselves or socializing, gathering in large numbers (called
-          a roost) at specific spots like tall trees or quiet areas for resting.
+          <b style="font-size: 1.3em; color: green">Routine Activities:</b>
+          <br />Crows typically follow a daily routine, scavenging for food in
+          open areas, markets, and around human settlements, resting in shaded
+          trees or high structures, often grooming themselves or socializing,
+          gathering in large numbers (called a roost) at specific spots like
+          tall trees or quiet areas for resting.
         </p>
         <p>
-          <b>Social Groups:</b> Crows live in social groups or flocks. These
-          groups have a certain pecking order (hierarchy). Stronger, older crows
-          dominate. Conflicts happen over food, space, or nesting spots. Crows
-          often cooperate to chase away threats or alert each other to danger.
+          <b style="font-size: 1.3em; color: green">Social Groups:</b>
+          <br />Crows live in social groups or flocks. These groups have a
+          certain pecking order (hierarchy). Stronger, older crows dominate.
+          Conflicts happen over food, space, or nesting spots. Crows often
+          cooperate to chase away threats or alert each other to danger.
         </p>
         <p>
-          <b>Nesting & Parenting:</b> Crows build nests high up in trees or
-          buildings using twigs, wires, and cloth pieces. Mother crows are
-          highly protective of their nests and chicks. They often stay in quiet,
-          undisturbed spots and can become aggressive if approached.
+          <b style="font-size: 1.3em; color: green">Nesting & Parenting:</b>
+          <br />Crows build nests high up in trees or buildings using twigs,
+          wires, and cloth pieces. Mother crows are highly protective of their
+          nests and chicks. They often stay in quiet, undisturbed spots and can
+          become aggressive if approached.
         </p>
         <div class="crow-video-section">
           <h2>Crows Roosting Video</h2>
