--- a/newversion/dogs.html
+++ b/newversion/dogs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fauna</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <link rel="stylesheet" href="dog.css" />
+    <link rel="stylesheet" href="flora.css" />
   </head>
   <body>
     <div class="flora-page">
@@ -226,7 +226,7 @@
         </div>
 
         <div class="flora-card" data-category="hostel">
-          <img src="../Dogs/Boys/kannadhasan.jpg" alt="Kannadasan Hostel Dogs" />
+          <img src="../Dogs/Boys/Kannadhasan.jpg" alt="Kannadasan Hostel Dogs" />
           <h3>Kabir Das Hostel</h3>
 
           <button class="view-on-map-btn" data-plant-id="dog10">
