--- a/newversion/new.html
+++ b/newversion/new.html
@@ -7,6 +7,8 @@
   <title>Pondicherry University GreenMap</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="new.css">
 </head>
 
@@ -95,7 +97,7 @@ function searchPage() {
             <img src="../Plants/African.jpg" class="d-block w-100" alt="African Plant">
             <div class="carousel-caption d-none d-md-block">
               <h5>Welcome to Pondicherry University</h5>
-              <p>A Green Haven of Knowledge and Nature</p>
+              <p>A Green Haven of Knowledge and Nature</p> 
             </div>
           </div>
           <div class="carousel-item">
@@ -131,8 +133,8 @@ function searchPage() {
 
   <section id="flora">
     <div class="container" data-aos="fade-up">
-      <h2>Flora of Pondicherry University: A Green Haven</h2>
-      <p>Pondicherry University is renowned for its lush, green campus, which is home to a wide variety of plant species. These plants contribute significantly to the university's serene and vibrant environment, making it a peaceful place for both students and faculty. Beyond their aesthetic appeal, many of these plants play vital roles in maintaining the local ecosystem, improving air quality, and supporting biodiversity. Additionally, some of the species present in the campus are known for their medicinal properties, offering valuable resources for research in the field of botany and natural healing. Here are some of the notable trees and plants that can be found across the university grounds:</p>
+      <h2>Flora of Pondicherry University: A Green Haven</h2> <br>
+      <p>Pondicherry University is renowned for its lush, green campus, which is home to a wide variety of plant species. These plants contribute significantly to the university's serene and vibrant environment, making it a peaceful place for both students and faculty. Beyond their aesthetic appeal, many of these plants play vital roles in maintaining the local ecosystem, improving air quality, and supporting biodiversity. Additionally, some of the species present in the campus are known for their medicinal properties, offering valuable resources for research in the field of botany and natural healing. Here are some of the notable trees and plants that can be found across the university grounds:</p> <br>
 
       <div class="card-row">
         <div class="card" data-aos="fade-up" data-aos-delay="100">
@@ -173,11 +175,11 @@ function searchPage() {
   <hr class="custom-hr">
   <section id="fauna">
     <div class="container" data-aos="fade-up">
-      <h2>Fauna Section</h2>
+      <h2>Fauna Section</h2> <br>
       <p>Pondicherry University is not only a haven for plant life but also for a rich diversity of fauna. 
         The campus is home to various animal species, including birds, mammals, reptiles, and insects, each playing a crucial role in the ecological balance of the area. The presence of these animals enhances the biodiversity of the university, contributing to the vibrancy of the environment. Many species found here are integral to the local ecosystem, aiding in pollination, seed dispersal, and natural pest control. Some animals are also of cultural and scientific importance, providing valuable opportunities for research in fields like ecology, animal behavior, and conservation. The university’s commitment to preserving its natural surroundings ensures that both flora and fauna thrive in harmony.
         Here are some of the notable animals you may encounter during your time at Pondicherry University:
-      </p>
+      </p> 
       
       <!-- Dogs Section -->
 <div id="dogs" class="container mt-5">
