--- a/newversion/new.html
+++ b/newversion/new.html
@@ -40,7 +40,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="faunaDropdown">
               <li><a class="dropdown-item" href="#dogs">Dogs</a></li>
-              <li><a class="dropdown-item" href="#crows">Crows</a></li>
+              <li><a class="dropdown-item" href="#Crows">Crows</a></li>
             </ul>
           </li>
           
