Added media queries

--- a/index.html
+++ b/index.html
@@ -328,6 +328,114 @@ hr {
   line-height: 1.7;
   margin-bottom: 15px;
 }
+@media screen and (max-width: 768px) {
+  header {
+    padding: 20px;
+    text-align: center;
+  }
+
+  header h2 {
+    position: static;
+    font-size: 36px;
+    margin-top: 10px;
+  }
+
+  .row,
+  .footer-container,
+  .team-photos,
+  .acknowledgment-section {
+    flex-direction: column;
+    padding: 0 20px;
+  }
+
+  .txt {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .txt h6 {
+    font-size: 18px;
+  }
+
+  .txt p {
+    font-size: 16px;
+  }
+
+  .pic img {
+    width: 100%;
+    height: auto;
+  }
+
+  .ack-text,
+  .ack-text h5 {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .ack-img img {
+    width: 120px;
+    height: 140px;
+  }
+
+  .moving-forward h4 {
+    font-size: 24px;
+  }
+
+  .moving-forward p {
+    font-size: 16px;
+  }
+
+  #explorebt {
+    padding: 10px 20px;
+    font-size: 16px;
+  }
+
+  footer {
+    padding: 40px 20px;
+    border-radius: 60px 60px 0 0;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header h2 {
+    font-size: 28px;
+  }
+
+  .ack-text h5,
+  .txt {
+    font-size: 20px;
+  }
+
+  .moving-forward {
+    padding: 20px;
+  }
+
+  .moving-forward h4 {
+    font-size: 20px;
+  }
+
+  .moving-forward p {
+    font-size: 15px;
+  }
+
+  .footer-card p {
+    font-size: 16px;
+  }
+
+  .acknowledgment-section {
+    padding: 20px;
+  }
+
+  .member img {
+    width: 60px;
+    height: 60px;
+  }
+
+  .member p {
+    font-size: 11px;
+  }
+}
+
 
 </style>
 </head>
