--- a/newversion/new.html
+++ b/newversion/new.html
@@ -318,7 +318,7 @@ function searchPage() {
       <p>Shwetha P</p>
     </div>
     <div class="credits-member">
-      <img src="../team/me.jpg" alt="Sivangi Sankar">
+      <a src='https://github.com/Angiigna'><img src="../team/me.jpg" alt="Sivangi Sankar"></a>
       <p>Sivangi Sankar</p>
     </div>
     <div class="credits-member">
