that didnt work so trying again

--- a/newversion/new.html
+++ b/newversion/new.html
@@ -317,10 +317,12 @@ function searchPage() {
       <img src="../team/shwetha.jpg" alt="Shwetha P">
       <p>Shwetha P</p>
     </div>
+    <a href="https://your-link-here.com" target="_blank">
     <div class="credits-member">
-      <a src='https://github.com/Angiigna'><img src="../team/me.jpg" alt="Sivangi Sankar"></a>
-      <p>Sivangi Sankar</p>
+    <img src="../team/me.jpg" alt="Sivangi Sankar">
+    <p>Sivangi Sankar</p>
     </div>
+    </a>
     <div class="credits-member">
       <img src="../team/chandu.jpg" alt="Tuvvadoddi Chandu">
       <p>Tuvvadoddi Chandu</p>
