made photos links to github, add whatever social link u would like

--- a/newversion/new.html
+++ b/newversion/new.html
@@ -281,59 +281,77 @@ function searchPage() {
     <p class="credits-intro">
       This project was made possible through the contributions of the following individuals. We thank them for their unique roles in bringing this vision to life.
     </p>
-<div class="credits-gallery">
-  <!-- Row 1: 6 members -->
-  <div class="credits-row">
-    <div class="credits-member">
-      <img src="../team/Athul.jpg" alt="Athul Krishnan TR">
-      <p>Athul Krishnan TR</p>
-    </div>
-    <div class="credits-member">
-      <img src="../team/kaveri.jpg" alt="Boda Kaveri">
-      <p>Boda Kaveri</p>
-    </div>
-    <div class="credits-member">
-      <img src="../team/fuad.jpg" alt="Fuad PP">
-      <p>Fuad PP</p>
-    </div>
-    <div class="credits-member">
-      <img src="../team/gokul.jpg" alt="Gokul G">
-      <p>Gokul G</p>
-    </div>
-    <div class="credits-member">
-      <img src="../team/maalu.jpg" alt="Lakshmi Nandana B">
-      <p>Lakshmi Nandana B</p>
-    </div>
-  
-  </div>
+    <div class="credits-gallery">
 
-  <!-- Row 2: 4 members centered -->
-  <div class="credits-row centered">
-      <div class="credits-member">
-      <img src="../team/mohan.jpg" alt="Mohan Raju">
-      <p>Mohan Raju</p>
-    </div>
-    <div class="credits-member">
-      <img src="../team/shwetha.jpg" alt="Shwetha P">
-      <p>Shwetha P</p>
-    </div>
-    <a href="https://your-link-here.com" target="_blank">
-    <div class="credits-member">
-    <img src="../team/me.jpg" alt="Sivangi Sankar">
-    <p>Sivangi Sankar</p>
-    </div>
-    </a>
-    <div class="credits-member">
-      <img src="../team/chandu.jpg" alt="Tuvvadoddi Chandu">
-      <p>Tuvvadoddi Chandu</p>
-    </div>
-    <div class="credits-member">
-      <img src="../team/viswa.jpg" alt="Viswapriya R">
-      <p>Viswapriya R</p>
-    </div>
-  </div>
-</div>
+      <!-- Row 1: 6 members -->
+      <div class="credits-row">
+        <div class="credits-member">
+          <a href="https://github.com/AthulTr8" target="_blank">
+            <img src="../team/Athul.jpg" alt="Athul Krishnan TR">
+          </a>
+          <p>Athul Krishnan TR</p>
+        </div>
+        <div class="credits-member">
+          <a href="#" target="_blank">
+            <img src="../team/kaveri.jpg" alt="Boda Kaveri">
+          </a>
+          <p>Boda Kaveri</p>
+        </div>
+        <div class="credits-member">
+          <a href="#" target="_blank">
+            <img src="../team/fuad.jpg" alt="Fuad PP">
+          </a>
+          <p>Fuad PP</p>
+        </div>
+        <div class="credits-member">
+          <a href="https://github.com/gokul-gopakumar" target="_blank">
+            <img src="../team/gokul.jpg" alt="Gokul G">
+          </a>
+          <p>Gokul G</p>
+        </div>
+        <div class="credits-member">
+          <a href="https://github.com/LakshmiNandanaB" target="_blank">
+            <img src="../team/maalu.jpg" alt="Lakshmi Nandana B">
+          </a>
+          <p>Lakshmi Nandana B</p>
+        </div>
+      </div>
 
+      <!-- Row 2: 4 members centered -->
+      <div class="credits-row centered">
+        <div class="credits-member">
+          <a href="https://github.com/mohanraju-07" target="_blank">
+            <img src="../team/mohan.jpg" alt="Mohan Raju">
+          </a>
+          <p>Mohan Raju</p>
+        </div>
+        <div class="credits-member">
+          <a href="https://github.com/aeroslayys" target="_blank">
+            <img src="../team/shwetha.jpg" alt="Shwetha P">
+          </a>
+          <p>Shwetha P</p>
+        </div>
+        <div class="credits-member">
+          <a href="https://github.com/Angiigna" target="_blank">
+            <img src="../team/me.jpg" alt="Sivangi Sankar">
+          </a>
+          <p>Sivangi Sankar</p>
+        </div>
+        <div class="credits-member">
+          <a href="https://github.com/Chandu29092004" target="_blank">
+            <img src="../team/chandu.jpg" alt="Tuvvadoddi Chandu">
+          </a>
+          <p>Tuvvadoddi Chandu</p>
+        </div>
+        <div class="credits-member">
+          <a href="https://github.com/priya14765" target="_blank">
+            <img src="../team/viswa.jpg" alt="Viswapriya R">
+          </a>
+          <p>Viswapriya R</p>
+        </div>
+      </div>
+
+    </div>
   </div>
 </section>
 
