--- a/newversion/dogs.html
+++ b/newversion/dogs.html
@@ -16,6 +16,7 @@
           <option value="all">All</option>
           <option value="hostel">Hostel</option>
           <option value="campus">Campus</option>
+          <option value="poco">Our Revered Guardian</option>
         </select>
         <input
           type="text"
