--- a/newversion/kingpoco.html
+++ b/newversion/kingpoco.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="kingpoco.css" />
   </head>
   <body>
+    <audio autoplay loop>
+      <source
+        src="../Dogs/Girls/Lindiwe Mkhize - Circle of LifeNants' Ingonyama.flac"
+        type="audio/flac"
+      />
+      Your browser does not support the audio element.
+    </audio>
+
     <div class="fauna-facts">
       <h1>
         HONOURABLE MENTION <i><br />His Highness, Poco</i>
